--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/testdb?serverTimezone=UTC&createDatabaseIfNotExist=true
 spring.datasource.username=ironhack
-spring.datasource.password=
+spring.datasource.password=ironhack2024
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=create-drop
